--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ m5out
 /build/ARM/arch/arm/generated
 /build/ARM/arch/arm/lib.o.partial
 /build/ARM/learning_gem5/part2/lib.o.partial
+/build/X86/arch/x86/generated
+/build/X86/arch/x86/lib.o.partial
+/build/X86/learning_gem5/part2/lib.o.partial
